Update source file arrays.xml

--- a/venus/framework-res.apk/res/values/arrays.xml
+++ b/venus/framework-res.apk/res/values/arrays.xml
@@ -25,66 +25,7 @@
     </string-array>
     <array name="config_autoBrightnessButtonBacklightValues" />
     <array name="config_autoBrightnessDisplayValuesNits" />
-    <integer-array name="config_autoBrightnessGame">
-        <item>120</item>
-        <item>120</item>
-        <item>120</item>
-        <item>125</item>
-        <item>130</item>
-        <item>144</item>
-        <item>175</item>
-        <item>245</item>
-        <item>302</item>
-        <item>348</item>
-        <item>382</item>
-        <item>404</item>
-        <item>406</item>
-        <item>407</item>
-        <item>408</item>
-        <item>409</item>
-        <item>412</item>
-        <item>414</item>
-        <item>416</item>
-        <item>417</item>
-        <item>419</item>
-        <item>420</item>
-        <item>423</item>
-        <item>426</item>
-        <item>428</item>
-        <item>432</item>
-        <item>442</item>
-        <item>449</item>
-        <item>456</item>
-        <item>458</item>
-        <item>466</item>
-        <item>472</item>
-        <item>479</item>
-        <item>486</item>
-        <item>494</item>
-        <item>500</item>
-        <item>507</item>
-        <item>516</item>
-        <item>522</item>
-        <item>530</item>
-        <item>536</item>
-        <item>545</item>
-        <item>550</item>
-        <item>559</item>
-        <item>565</item>
-        <item>674</item>
-        <item>783</item>
-        <item>905</item>
-        <item>1028</item>
-        <item>1152</item>
-        <item>1284</item>
-        <item>1418</item>
-        <item>1600</item>
-        <item>1760</item>
-        <item>1900</item>
-        <item>2000</item>
-        <item>2047</item>
-        <item>2047</item>
-    </integer-array>
+    <array name="config_autoBrightnessGame" />
     <array name="config_autoBrightnessKeyboardBacklightValues" />
     <array name="config_autoBrightnessLcdBacklightValues" />
     <array name="config_autoBrightnessLevels" />
@@ -422,7 +363,6 @@
         <item>placeholder:file:///system/media/audio/ringtones/Leisure.ogg|37</item>
         <item>file:///system/media/audio/ringtones/Lollipop.ogg|38</item>
         <item>file:///system/media/audio/ringtones/MIX.ogg|39</item>
-        <item>file:///system/media/audio/ringtones/MiMix2.ogg|39</item>
         <item>file:///system/media/audio/ringtones/Mi.ogg|40</item>
         <item>file:///system/media/audio/ringtones/MiHouse.ogg|41</item>
         <item>file:///system/media/audio/ringtones/MiJazz.ogg|42</item>
@@ -459,159 +399,7 @@
         <item>file:///system/media/audio/ringtones/DigitalUniverse.ogg|155</item>
         <item>file:///system/media/audio/ringtones/Reveries.ogg|156</item>
     </string-array>
-    <string-array name="config_ringtoneEffectUris">
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>file:///system/media/audio/ringtones/AcousticGuitar.ogg</item>
-        <item>placeholder:file:///system/media/audio/ringtones/Blues.ogg</item>
-        <item>file:///system/media/audio/ringtones/Candy.ogg</item>
-        <item>file:///system/media/audio/ringtones/Carousel.ogg</item>
-        <item>file:///system/media/audio/ringtones/Celesta.ogg</item>
-        <item>file:///system/media/audio/ringtones/Childhood.ogg</item>
-        <item>file:///system/media/audio/ringtones/Country.ogg</item>
-        <item>file:///system/media/audio/ringtones/Cowboy.ogg</item>
-        <item>placeholder:file:///system/media/audio/ringtones/Echo.ogg</item>
-        <item>file:///system/media/audio/ringtones/Fairyland.ogg</item>
-        <item>file:///system/media/audio/ringtones/Fantasy.ogg</item>
-        <item>file:///system/media/audio/ringtones/FieldTrip.ogg</item>
-        <item>file:///system/media/audio/ringtones/Glee.ogg</item>
-        <item>placeholder:file:///system/media/audio/ringtones/Glockenspiel.ogg</item>
-        <item>file:///system/media/audio/ringtones/IceLatte.ogg</item>
-        <item>file:///system/media/audio/ringtones/Kungfu.ogg</item>
-        <item>placeholder:file:///system/media/audio/ringtones/Leisure.ogg</item>
-        <item>file:///system/media/audio/ringtones/Lollipop.ogg</item>
-        <item>file:///system/media/audio/ringtones/MiMix2.ogg</item>
-        <item>file:///system/media/audio/ringtones/Mi.ogg</item>
-        <item>file:///system/media/audio/ringtones/MiHouse.ogg</item>
-        <item>file:///system/media/audio/ringtones/MiJazz.ogg</item>
-        <item>file:///system/media/audio/ringtones/MiRemix.ogg</item>
-        <item>file:///system/media/audio/ringtones/MountainSpring.ogg</item>
-        <item>file:///system/media/audio/ringtones/Orange.ogg</item>
-        <item>placeholder:file:///system/media/audio/ringtones/Raindrops.ogg</item>
-        <item>file:///system/media/audio/ringtones/SpaceAge.ogg</item>
-        <item>file:///system/media/audio/ringtones/ToyRobot.ogg</item>
-        <item>file:///system/media/audio/ringtones/Vigor.ogg</item>
-        <item>file:///system/media/audio/notifications/Bottle.ogg</item>
-        <item>file:///system/media/audio/notifications/Bubble.ogg</item>
-        <item>file:///system/media/audio/notifications/Bullfrog.ogg</item>
-        <item>file:///system/media/audio/notifications/Burst.ogg</item>
-        <item>file:///system/media/audio/notifications/Chirp.ogg</item>
-        <item>file:///system/media/audio/notifications/Clank.ogg</item>
-        <item>file:///system/media/audio/notifications/Crystal.ogg</item>
-        <item>file:///system/media/audio/notifications/FadeIn.ogg</item>
-        <item>file:///system/media/audio/notifications/FadeOut.ogg</item>
-        <item>file:///system/media/audio/notifications/Flute.ogg</item>
-        <item>file:///system/media/audio/notifications/Fresh.ogg</item>
-        <item>file:///system/media/audio/notifications/Frog.ogg</item>
-        <item>file:///system/media/audio/notifications/Guitar.ogg</item>
-        <item>file:///system/media/audio/notifications/Harp.ogg</item>
-        <item>file:///system/media/audio/notifications/IncomingMessage.ogg</item>
-        <item>file:///system/media/audio/notifications/MessageSent.ogg</item>
-        <item>file:///system/media/audio/notifications/Moment.ogg</item>
-        <item>file:///system/media/audio/notifications/NotificationXylophone.ogg</item>
-        <item>file:///system/media/audio/notifications/Potion.ogg</item>
-        <item>file:///system/media/audio/notifications/Radar.ogg</item>
-        <item>file:///system/media/audio/notifications/Spring.ogg</item>
-        <item>file:///system/media/audio/notifications/Swoosh.ogg</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>placeholder</item>
-        <item>file:///system/media/audio/ringtones/Atlantis.ogg</item>
-        <item>file:///system/media/audio/ringtones/DigitalUniverse.ogg</item>
-        <item>file:///system/media/audio/ringtones/Reveries.ogg</item>
-    </string-array>
+    <array name="config_ringtoneEffectUris" />
     <integer-array name="config_safeModeEnabledVibePattern">
         <item>0</item>
         <item>1</item>
