--- a/star/CleanMaster.apk/res/values/plurals.xml
+++ b/star/CleanMaster.apk/res/values/plurals.xml
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="a_hour_ago">
+        <item quantity="other">1 hour ago</item>
+    </plurals>
+    <plurals name="abbrev_a_hour_ago">
+        <item quantity="other">1 hour ago</item>
+    </plurals>
+    <plurals name="abbrev_half_hour_ago">
+        <item quantity="other">Half an hour ago</item>
+    </plurals>
+    <plurals name="abbrev_in_a_hour">
+        <item quantity="other">In 1 hour</item>
+    </plurals>
+    <plurals name="abbrev_in_half_hour">
+        <item quantity="other">In half an hour</item>
+    </plurals>
+    <plurals name="abbrev_in_less_than_one_minute">
+        <item quantity="other">Immediately</item>
+    </plurals>
+    <plurals name="abbrev_in_num_minutes">
+        <item quantity="other">in %d mins</item>
+        <item quantity="one">in 1 min</item>
+    </plurals>
+    <plurals name="abbrev_less_than_one_minute_ago">
+        <item quantity="other">Just now</item>
+    </plurals>
+    <plurals name="abbrev_num_minutes_ago">
+        <item quantity="other">%d mins ago</item>
+        <item quantity="one">1 min ago</item>
+    </plurals>
     <plurals name="app_usage_day">
         <item quantity="other">"Haven't used for %d days"</item>
         <item quantity="one">"Haven't used for %d day"</item>
@@ -106,6 +135,9 @@
         <item quantity="other">&lt;Data>Found &lt;big>&lt;big>&lt;font size=20 color=#FF9000 >%1$d&lt;/font>&lt;/big>&lt;/big> voice messages&lt;/Data></item>
         <item quantity="one">&lt;Data>Found &lt;big>&lt;big>&lt;font size=20 color=#FF9000 >%1$d&lt;/font>&lt;/big>&lt;/big> voice message&lt;/Data></item>
     </plurals>
+    <plurals name="half_hour_ago">
+        <item quantity="other">Half an hour ago</item>
+    </plurals>
     <plurals name="hint_similar_image_header_left">
         <item quantity="other">%d groups</item>
         <item quantity="one">%d group</item>
@@ -113,6 +145,19 @@
     <plurals name="hour">
         <item quantity="other">%1$d hours</item>
         <item quantity="one">%1$d hour</item>
+    </plurals>
+    <plurals name="in_a_hour">
+        <item quantity="other">In 1 hour</item>
+    </plurals>
+    <plurals name="in_half_hour">
+        <item quantity="other">In half an hour</item>
+    </plurals>
+    <plurals name="in_less_than_one_minute">
+        <item quantity="other">Immediately</item>
+    </plurals>
+    <plurals name="in_num_minutes">
+        <item quantity="other">in %d minutes</item>
+        <item quantity="one">in 1 minute</item>
     </plurals>
     <plurals name="install_find_application">
         <item quantity="other">Search among %d apps</item>
@@ -122,9 +167,24 @@
         <item quantity="other">Found %d apps</item>
         <item quantity="one">Found %d app</item>
     </plurals>
+    <plurals name="less_than_one_minute_ago">
+        <item quantity="other">Just now</item>
+    </plurals>
     <plurals name="minute">
         <item quantity="other">%1$d minutes</item>
         <item quantity="one">%1$d minute</item>
+    </plurals>
+    <plurals name="miuix_appcompat_items_selected">
+        <item quantity="other">%d items selected</item>
+        <item quantity="one">%d item selected</item>
+    </plurals>
+    <plurals name="notification_checker_installed_apk_text">
+        <item quantity="other">Delete %d installation packages</item>
+        <item quantity="one">Delete %d installation package</item>
+    </plurals>
+    <plurals name="num_minutes_ago">
+        <item quantity="other">%d minutes ago</item>
+        <item quantity="one">1 minute ago</item>
     </plurals>
     <plurals name="people">
         <item quantity="other">Downloaded by %1$d people</item>
@@ -138,9 +198,21 @@
         <item quantity="other">&lt;Data>"&lt;font color=#ff0000 >%d&lt;/font> apps haven't been used for a long time, take a look."&lt;/Data></item>
         <item quantity="one">&lt;Data>"&lt;font color=#ff0000 >%d&lt;/font> app hasn't been used for a long time, take a look."&lt;/Data></item>
     </plurals>
+    <plurals name="rs_clean_size_hint_image">
+        <item quantity="other">Enough for %d photos</item>
+        <item quantity="one">Enough for %d photo</item>
+    </plurals>
+    <plurals name="rs_clean_size_hint_song">
+        <item quantity="other">Enough for %d songs</item>
+        <item quantity="one">Enough for %d song</item>
+    </plurals>
     <plurals name="second">
         <item quantity="other">%1$d seconds</item>
         <item quantity="one">%1$d second</item>
+    </plurals>
+    <plurals name="video_clean_scan_app_result">
+        <item quantity="other">%d apps with cached videos</item>
+        <item quantity="one">%d app with cached videos</item>
     </plurals>
     <plurals name="view_num">
         <item quantity="other">%1$s views</item>
@@ -165,5 +237,9 @@
     <plurals name="whatsapp_delete_files">
         <item quantity="other">Delete %1$d items?</item>
         <item quantity="one">Delete %1$d item?</item>
+    </plurals>
+    <plurals name="whatsapp_file_audio_dec">
+        <item quantity="other">%1$s audio files</item>
+        <item quantity="one">%1$s audio file</item>
     </plurals>
 </resources>
